WIP 1/n: add sr_mae pipeline template

--- a/deliverible.ipynb
+++ b/deliverible.ipynb
@@ -69,6 +69,100 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "class SRDataset(Dataset):\n",
+        "  def __init__(self, raw_dataset, sr_config):\n",
+        "    self.raw_dataset = raw_dataset\n",
+        "    self.sr_sample_idxs = sr_config['sr_sample_idxs']\n",
+        "\n",
+        "  def __get_item__(self, idx):\n",
+        "    return self.raw_dataset.__get_item__(self.sr_sample_idxs[idx % self.sr_sample_idx])\n",
+        "\n",
+        "  def __len__(self):\n",
+        "    return len(self.sr_sample_idxs)\n",
+        "\n",
+        "class SRInput(object):\n",
+        "  def __init__(self, sr_config, sr_dataloader, dataset_type):\n",
+        "    if dataset_type == 'LJ':\n",
+        "      return pd.DataFrames(['dx': dx, 'dy':dy, 'dz':dz, 'r': radial_distance])\n",
+        "    elif dataset_type == 'tip3w':\n",
+        "      return pd.DataFrames(['dx': dx, 'dy':dy, 'dz':dz, 'r' : radial_distance, 'q1':q1, 'q2': q2])\n",
+        "    elif dataset_type == 'tip4w':\n",
+        "      return pd.DataFrames(['dx': dx, 'dy':dy, 'dz':dz, 'r' : radial_distance, 'q1':q1, 'q2': q2])\n",
+        "    elif dataset_type == 'DFT':\n",
+        "      return pd.DataFrames(['dx': dx, 'dy':dy, 'dz':dz, 'r' : radial_distance, 'q1':q1, 'q2': q2])\n",
+        "    else:\n",
+        "      print(\"Invalid datatype.\")\n",
+        "      exit(0)\n",
+        "\n",
+        "\n",
+        "class SROutput(object):\n",
+        "  def __init__(self, model_config, sr_dataloader):\n",
+        "    self.sr_dataloader = sr_dataloader\n",
+        "    self.gamd = GAMD(model_config)\n",
+        "    if model_config['use_pretrained'] == 'False':\n",
+        "      # train the model first\n",
+        "      model = self.gamd.train()\n",
+        "    else:\n",
+        "      model = self.gamd.load()\n",
+        "    sr_edge_messages = []\n",
+        "    for data_sample in sr_dataloader:\n",
+        "      _, edge_messages = model(data_sample)\n",
+        "      sr_edge_messages.append(edge_messages)\n",
+        "    return sr_edge_messages\n",
+        "\n",
+        "\n",
+        "\n",
+        "###############################\n",
+        "def get_raw_dataset_dataloader_for_sr(raw_dataset, sr_config):\n",
+        "  sr_dataset = SRDataset(raw_dataset, sr_config)\n",
+        "  sr_dataloader = DataLoader(sr_dataset, batch_size=sr_config.batch_size, shuffle=True)\n",
+        "  return sr_dataloader\n",
+        "\n",
+        "def get_sr_input(sr_config, sr_dataloader, dataset_type):\n",
+        "  sr_input = SRInput(sr_config, sr_dataloader, dataset_type)\n",
+        "  return sr_input\n",
+        "\n",
+        "def get_sr_output(model, sr_dataloader):\n",
+        "  sr_output = SROutput(model, sr_dataloader)\n",
+        "  return sr_output\n",
+        "##############################\n",
+        "def run_sr_mae_pipeline(question):\n",
+        "  sr_dataloader = get_raw_dataset_dataloader_for_sr(raw_dataset, sr_config)\n",
+        "  if run_sr:\n",
+        "    sr_input = get_sr_input(sr_config, sr_dataloader, dataset_type)\n",
+        "    sr_output = get_sr_output(model_config, sr_dataloader)\n",
+        "    sr_model = fit_sr(sr_input, sr_output, sr_config)\n",
+        "  else:\n",
+        "    sr_model = load_sr_model(sr_config)\n",
+        "  sr_mae = compute_sr_mae(sr_model, sr_dataloader)\n",
+        "  return sr_mae\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        },
+        "id": "1INfGLdxYyPF",
+        "outputId": "0ee9b233-7b55-4a4f-ab23-8a37c271a24f"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'Dataset' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-e3d5d58bb962>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mSRDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDataset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mraw_dataset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msr_config\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mraw_dataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mraw_dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msr_sample_idxs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msr_config\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'sr_sample_idxs'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'Dataset' is not defined"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### Load dataset"
