--- a/deliverible.ipynb
+++ b/deliverible.ipynb
@@ -34,22 +34,30 @@
         "\n",
         "## Tasks\n",
         "* Concept dependencies:\n",
-        "  1. * SR MAE -> (SR config, SR input, SR output)\n",
-        "     * SR config -> SR params\n",
-        "     * SR input -> per edge physical model priors, like radial dist, pair-charge for the underlying phenomenon\n",
-        "     * SR output -> (edge messages from GNN model)\n",
-        "     * Edge messages from GNN model -> GNN model weights\n",
-        "     * GNN model weights -> GNN params and hyperparams\n",
-        "     * GNN params -> GNN architecture -> Dataset\n",
-        "     * GNN hyperparams -> Loss function -> Inductive bias type\n",
-        "     * Dataset -> Dataset type (LJ, Tip3w, Tip4w, DFT?), simulation configuration\n",
-        "     * Simulation configuration -> (box size, reduced density, number of particles, underlying potential equation, radius cutoff)\n",
-        " 2. * GNN MAE over OOD dataset -> GNN model weights, OOD dataset config     \n",
-        "     * GNN model weights -> GNN params and hyperparams\n",
-        "     * GNN params -> GNN architecture -> Dataset\n",
-        "     * GNN hyperparams -> Loss function -> Inductive bias type\n",
-        "     * Dataset -> Dataset type (LJ, Tip3w, Tip4w, DFT?), simulation configuration\n",
-        "     * Simulation configuration (for both train and OOD) -> (box size, reduced density, number of particles, underlying potential equation, radius cutoff)\n",
+        "  1. * **SR MAE -> (SR model, SR input, SR output)**\n",
+        "       * SR model -> (SR config, SR input, SR output)\n",
+        "         * SR config -> SR params\n",
+        "           * SR params = say with or without hint SR, choice of operators, loss function\n",
+        "       * SR input (= per edge physical model priors, like radial dist, pair-charge for the underlying phenomenon) -> SR Dataloader          \n",
+        "         * SR dataloader -> SR dataloader config\n",
+        "           * SR config = batch size, collate function, .. , SRDataset class\n",
+        "             * SRDataset class -> neighbor functions for edge index calculation, preprocessing               \n",
+        "       * SR output (= edge messages from GNN model) -> GNN model weights:             \n",
+        "         * GNN model weights -> GNN params, hyperparams, train dataset\n",
+        "           * GNN params -> GNN architecture:\n",
+        "             * GNN architecture -> Dataset type:\n",
+        "               * Dataset type = LJ, Tip3w, Tip4w, DFT?\n",
+        "           * Train dataset -> Dataset type, simulation config\n",
+        "             * Simulation configuration -> (box size, reduced density, number of particles, underlying potential equation, radius cutoff)             \n",
+        "           * GNN hyperparams -> Loss function\n",
+        "             * Loss function -> Inductive bias type\n",
+        "     \n",
+        " 2. * **GNN MAE over OOD dataset -> GNN model weights, OOD dataset config**\n",
+        "       * GNN model weights -> GNN params and hyperparams\n",
+        "       * GNN params -> GNN architecture -> Dataset\n",
+        "       * GNN hyperparams -> Loss function -> Inductive bias type\n",
+        "       * Dataset -> Dataset type (LJ, Tip3w, Tip4w, DFT?), simulation configuration\n",
+        "       * Simulation configuration (for both train and OOD) -> (box size, reduced density, number of particles, underlying potential equation, radius cutoff)\n",
         "                                              \n",
         "* For a question (expressed a dictonary) conducts the experiment and returns an answer as:\n",
         "  1. Loads a dataset from LJ, tip3w, tip4w, DFT\n",
@@ -147,7 +155,7 @@
         "id": "1INfGLdxYyPF",
         "outputId": "0ee9b233-7b55-4a4f-ab23-8a37c271a24f"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
