WIP 3/n: add SR MAE param list

--- a/deliverible.ipynb
+++ b/deliverible.ipynb
@@ -34,30 +34,27 @@
         "\n",
         "## Tasks\n",
         "* Concept dependencies:\n",
-        "  1. * **SR MAE -> (SR model, SR input, SR output)**\n",
-        "       * SR model -> (SR config, SR input, SR output)\n",
+        "  1. * **SR MAE -> (SR model, SR input test, SR output test)**\n",
+        "       * SR model -> (SR config, SR input train, SR output train)\n",
         "         * SR config -> SR params\n",
         "           * SR params = say with or without hint SR, choice of operators, loss function\n",
         "       * SR input (= per edge physical model priors, like radial dist, pair-charge for the underlying phenomenon) -> SR Dataloader          \n",
         "         * SR dataloader -> SR dataloader config\n",
-        "           * SR config = batch size, collate function, .. , SRDataset class\n",
+        "           * SR dataloader config = batch size, collate function, .. , SRDataset class\n",
         "             * SRDataset class -> neighbor functions for edge index calculation, preprocessing               \n",
         "       * SR output (= edge messages from GNN model) -> GNN model weights:             \n",
-        "         * GNN model weights -> GNN params, hyperparams, train dataset\n",
+        "         * GNN model weights -> GNN params, hyperparams, train/val dataset\n",
         "           * GNN params -> GNN architecture:\n",
         "             * GNN architecture -> Dataset type:\n",
         "               * Dataset type = LJ, Tip3w, Tip4w, DFT?\n",
         "           * Train dataset -> Dataset type, simulation config\n",
         "             * Simulation configuration -> (box size, reduced density, number of particles, underlying potential equation, radius cutoff)             \n",
-        "           * GNN hyperparams -> Loss function\n",
+        "           * GNN hyperparams -> Loss function, learning rate ...\n",
         "             * Loss function -> Inductive bias type\n",
-        "     \n",
+        "    *  SR MAE = f (SR n iter, selection metric, unary operators, binary operators, custom operators, element wise loss function, template expression, edge attributes like radial distance, pair charges, dx, dy, dz, SRDataloader batchsize, collate function, SRDataset class config: neighbor calculation function, dataset preprocessing pipeline, GNN model architecture, GNN model hyperparams like loss function: inducitive bias type, learning rate, simulation configuration like box size, radius cutoff, number of particles, reduced density, potential energy equation, ?)            \n",
+        "---     \n",
         " 2. * **GNN MAE over OOD dataset -> GNN model weights, OOD dataset config**\n",
-        "       * GNN model weights -> GNN params and hyperparams\n",
-        "       * GNN params -> GNN architecture -> Dataset\n",
-        "       * GNN hyperparams -> Loss function -> Inductive bias type\n",
-        "       * Dataset -> Dataset type (LJ, Tip3w, Tip4w, DFT?), simulation configuration\n",
-        "       * Simulation configuration (for both train and OOD) -> (box size, reduced density, number of particles, underlying potential equation, radius cutoff)\n",
+        "       * **TBD**\n",
         "                                              \n",
         "* For a question (expressed a dictonary) conducts the experiment and returns an answer as:\n",
         "  1. Loads a dataset from LJ, tip3w, tip4w, DFT\n",
